--- a/doc/blog/discussion.mdwn
+++ b/doc/blog/discussion.mdwn
@@ -1,5 +1,15 @@
 How do you provide the per post discussion links in your own blog?
 
-And do you have any ideas/hints about implementing a "comments" feature.  What I'm after is something for users who don't quite understand the Wiki style for discussions.  I would like to have a form for them to post a comment and have the comment appended to the discussion Wiki-style.  Maybe take it as far as implementing "replies" to other comments.
+> That's configured by the "actions" parameter to the inline directive. See
+> docs in [[plugins/inline]]. --[[Joey]]
+
+And do you have any ideas/hints about implementing a "comments" feature.
+What I'm after is something for users who don't quite understand the Wiki
+style for discussions.  I would like to have a form for them to post a
+comment and have the comment appended to the discussion Wiki-style.  Maybe
+take it as far as implementing "replies" to other comments.
 
 -- Marcelo
+
+> See [[todo/discussion_page_as_blog]] for some of my own thoughts on this
+> --[[Joey]]
