--- a/doc/plugins/wikitext.mdwn
+++ b/doc/plugins/wikitext.mdwn
@@ -2,9 +2,9 @@
 [[tag type/format]]
 
 This plugin allows ikiwiki to process pages written in the original wiki
-text format. To use it, you need to have the Text::WikiFormat perl module
-installed, enable the plugin, then files with the extention `.wiki` will be
-processed as wiki text.
+text format. To use it, you need to have the [[cpan Text::WikiFormat]] perl
+module installed, enable the plugin, then files with the extention `.wiki`
+will be processed as wiki text.
 
 Wiki formatting is very simple. An item wrapped in three single quotes is
 strong. An item wrapped in two single quotes is emphasized. Four or more
