--- a/debian/changelog
+++ b/debian/changelog
@@ -7,12 +7,13 @@ ikiwiki (1.34) UNRELEASED; urgency=low
   * Modified svn, git, tla backends to recognise such web commits.
   * Move httpauth support to a plugin.
   * Add openidsignup config option.
-  * Make the openid plugin support the callbacks from myopenid.com via its 
+  * Make the openid plugin support the callbacks from myopenid.com via its
     affiliate program.
   * Change how post signin actions are propigated through the signin process;
     they're now stored in the session.
+  * Add optional "desc" parameter to shortcut definitions.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 19 Nov 2006 16:40:26 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon, 20 Nov 2006 06:14:51 -0500
 
 ikiwiki (1.33) unstable; urgency=low
 
