--- a/doc/plugins/ddate.mdwn
+++ b/doc/plugins/ddate.mdwn
@@ -4,5 +4,5 @@
 Enables use of Discordian dates. `--timeformat` can be used to change
 the date format; see `ddate(1)`.
 
-This plugin requires the DateTime and DateTime::Calendar::Discordian
-perl modules.
+This plugin requires the [[cpan DateTime]] and 
+[[cpan DateTime::Calendar::Discordian]] perl modules.
