--- a/doc/plugins/openid.mdwn
+++ b/doc/plugins/openid.mdwn
@@ -4,9 +4,9 @@
 This plugin allows users to use their [OpenID](http://openid.net/) to log
 into the wiki.
 
-The plugin needs the `Net::OpenID::Consumer` perl module. The
-`LWPx::ParanoidAgent` perl module is used if available, for added
-security. Finally, the `Crypt::SSLeay` perl module is needed to support
+The plugin needs the [[cpan Net::OpenID::Consumer]] perl module. The
+[[cpan LWPx::ParanoidAgent]] perl module is used if available, for added
+security. Finally, the [[cpan Crypt::SSLeay]] perl module is needed to support
 users entering "https" OpenID urls.
 
 This plugin has a configuration option. You can set `--openidsignup`
