--- a/doc/plugins/typography.mdwn
+++ b/doc/plugins/typography.mdwn
@@ -4,4 +4,5 @@
 This plugin, also known as
 [SmartyPants](http://daringfireball.net/projects/smartypants/), translates
 plain ASCII punctuation characters into ``smart'' typographic punctuation HTML
-entities. To use it, you need to have the `Text::Typography` module installed.
+entities. To use it, you need to have the [[cpan Text::Typography]] module
+installed.
