--- a/debian/changelog
+++ b/debian/changelog
@@ -12,8 +12,10 @@ ikiwiki (1.34) UNRELEASED; urgency=low
   * Change how post signin actions are propigated through the signin process;
     they're now stored in the session.
   * Add optional "desc" parameter to shortcut definitions.
+  * Avoid locking the wiki at all when handling some basic cgi stuff
+    (searches, recentchanges).
 
- -- Joey Hess <joeyh@debian.org>  Mon, 20 Nov 2006 06:14:51 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon, 20 Nov 2006 06:54:12 -0500
 
 ikiwiki (1.33) unstable; urgency=low
 
