--- a/doc/plugins/openid.mdwn
+++ b/doc/plugins/openid.mdwn
@@ -22,3 +22,5 @@ affiliate is created, set `openidsignup` to point to the affiliate's signup
 url.
 
 This plugin is included in ikiwiki, but is not enabled by default.
+
+foo
