doesn't really matter what do= is set to, as long as it's set

--- a/doc/plugins/openid.mdwn
+++ b/doc/plugins/openid.mdwn
@@ -17,7 +17,7 @@ This plugin supports the
 [myopenid.com affiliate program](http://myopenid.com/affiliate_welcome),
 which can be used to help users sign up for an OpenID and log into your
 site in a single, unified process. When you create the affiliate, specify a
-login url like `http://example.com/ikiwiki.cgi?do=postsignin`. Once the
+login url like `http://example.com/ikiwiki.cgi?do=continue`. Once the
 affiliate is created, set `openidsignup` to point to the affiliate's signup
 url.
 
