--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -7,9 +7,10 @@ wiki, or just have [[type/fun]].
 There's documentation if you want to [[write]] your own plugins, or you can
 install and use plugins contributed by others. 
 
-The [[mdwn]], [[inline]], and [[htmlscrubber]] plugins are enabled by default.
-To enable other plugins, use the `--plugin` switch described in [[usage]],
-or the equivalent `add_plugins` line in [[ikiwiki.setup]].
+The [[mdwn]], [[inline]], [[htmlscrubber]], and [[passwordauth]] plugins
+are enabled by default. To enable other plugins, use the `--plugin` switch
+described in [[usage]], or the equivalent `add_plugins` line in
+[[ikiwiki.setup]].
 
 # Plugin directory
 
