--- a/doc/news/openid.mdwn
+++ b/doc/news/openid.mdwn
@@ -1,6 +1,6 @@
-Ikiwiki in svn now has support for using [[../OpenID]], a decentralized
-authentication mechanism that allows you to have one login that you can use
-on a growing number of websites.
+Ikiwiki in svn now has support for using [OpenID](http://openid.net), a
+decentralized authentication mechanism that allows you to have one login
+that you can use on a growing number of websites.
 
 Traditional password-based logins are still supported, but I'm considering
 switching at least ikiwiki.kitenet.net over to using only OpenID logins. 
