--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -2,6 +2,10 @@ This is the SandBox, a page anyone can edit to try out ikiwiki.
 
 ----
 
+Hello from OpenID user ~~~~.
+
+----
+
 Test. Проверка. テスト ığüşöçİ ทดสอบ
 
 Here's a paragraph.
