web commit by http://id.kurokatta.org/david: Copyedit.

--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -18,7 +18,7 @@ _(The list of things to fix.)_
 
 Anyone with direct commit access can forge "web commit from foo" and
 make it appear on [[RecentChanges]] like foo committed. One way to avoid
-this would be to limit web commits to those done by a certian user.
+this would be to limit web commits to those done by a certain user.
 
 ## other stuff to look at
 
