--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -3,6 +3,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=google url="http://www.google.com/search?q=%s"]]
 * [[shortcut name=wikipedia url="http://en.wikipedia.org/wiki/%s"]]
 * [[shortcut name=debbug url="http://bugs.debian.org/%s" desc="bug #%s"]]
+* [[shortcut name=deblist url="http://lists.debian.org/debian-%s" desc="debian-%s@lists.debian.org"]]
 * [[shortcut name=debpkg url="http://packages.debian.org/%s"]]
 * [[shortcut name=cpan url="http://search.cpan.org/search?mode=dist&query=%s"]]
 
