--- a/doc/todo/Support_XML-RPC-based_blogging.mdwn
+++ b/doc/todo/Support_XML-RPC-based_blogging.mdwn
@@ -1,1 +1,7 @@
-Perhaps ikiwiki should support XML-RPC-baed blogging, using the standard MetaWeblog protocol.  This would allow the use of applets like gnome-blog to post to an ikiwiki blog.  The protocol supports multiple blog names, so one standard URL with page names as blog names would work.
+Perhaps ikiwiki should support XML-RPC-baed blogging, using the standard
+MetaWeblog protocol.  This would allow the use of applets like gnome-blog
+to post to an ikiwiki blog.  The protocol supports multiple blog names, so
+one standard URL with page names as blog names would work.
+
+> This would be a great thing to add a plugin for. (Probably using the cgi
+> hook to let ikiwiki act as an RPC server. --[[Joey]]
