--- a/doc/news/openid/discussion.mdwn
+++ b/doc/news/openid/discussion.mdwn
@@ -1,3 +1,13 @@
-I think that I have logged in using openid! But I think the login page could use some adjustemnts.
+I think that I have logged in using openid! But I think the login page
+could use some adjustemnts.
 
-Perhaps the openid stuff should be seperate, unless I was supposed to login as well. Also have I just created an account on this wiki as well?
+Perhaps the openid stuff should be seperate, unless I was supposed to login
+as well. Also have I just created an account on this wiki as well?
+
+> The idea is that you fill in one or the other but not both. If it's
+> switched to only openid, it's much clearer, since the
+> username/password/register stuff disappears from the form. 
+>
+> By signing in with openid, you have created an account on the wiki; you
+> can configure it to eg, subscribe your email address to changes to pages.
+> --[[Joey]]
