--- a/doc/news/openid/discussion.mdwn
+++ b/doc/news/openid/discussion.mdwn
@@ -6,7 +6,9 @@ as well. Also have I just created an account on this wiki as well?
 
 > The idea is that you fill in one or the other but not both. If it's
 > switched to only openid, it's much clearer, since the
-> username/password/register stuff disappears from the form. 
+> username/password/register stuff disappears from the form.
+>
+> If both login methods are enabled, it's limited to using one form for both though..
 >
 > By signing in with openid, you have created an account on the wiki; you
 > can configure it to eg, subscribe your email address to changes to pages.
