--- a/doc/news/openid/discussion.mdwn
+++ b/doc/news/openid/discussion.mdwn
@@ -9,7 +9,7 @@ as well. Also have I just created an account on this wiki as well?
 > username/password/register stuff disappears from the form.
 >
 > If both login methods are enabled, it's limited to using one form for
-> both though..
+> both though...
 >
 > By signing in with openid, you have created an account on the wiki; you
 > can configure it to eg, subscribe your email address to changes to pages.
