--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,15 @@ ikiwiki (1.34) UNRELEASED; urgency=low
     ikiwiki in nonstandard locations, including home directories, by just
     setting PREFIX at build time.
   * Fix nested examples directory in deb.
+  * Add a test suite for the mercurial backend, contributed by Emanuele Aina.
+  * Add a test suite for the svn backend.
+  * Daemonize before sending RPC pings, since that can take a while
+    and/or hang.
+  * Daemonize before sending commit mails, as that can also take a long
+    time/hang if the mail server is unhappy.
+  * Factor out commit mail sending code into new function.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 20 Nov 2006 16:49:05 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 21 Nov 2006 11:58:30 -0500
 
 ikiwiki (1.33) unstable; urgency=low
 
