web commit by ScottHenson

--- a/doc/bugs/Disappearing_Pages.mdwn
+++ b/doc/bugs/Disappearing_Pages.mdwn
@@ -33,3 +33,7 @@ to be the use of sidebars and google calendar in the affected wiki.
 
 >>>> That's ok, but since I couldn't reproduce it with the data you sent,
 >>>> I can't really fix it. --[[Joey]]
+
+>>>>> Can you not reproduce the warning or not reproduce the disappearing 
+>>>>> pages?  The warning does not seem to have anything to do with the 
+>>>>> error of the disappearing pages.  --[[ScottHenson]]
