--- a/doc/bugs/Disappearing_Pages.mdwn
+++ b/doc/bugs/Disappearing_Pages.mdwn
@@ -37,3 +37,5 @@ to be the use of sidebars and google calendar in the affected wiki.
 >>>>> Can you not reproduce the warning or not reproduce the disappearing 
 >>>>> pages?  The warning does not seem to have anything to do with the 
 >>>>> error of the disappearing pages.  --[[ScottHenson]]
+
+>>>>>> I can't reproduce any disappearing text. --[[Joey]]
