--- a/doc/templates/discussion.mdwn
+++ b/doc/templates/discussion.mdwn
@@ -5,3 +5,5 @@ Would it be best to copy them all into the wiki under version control or have th
 Thanks
 
 john
+
+> Either way would work ok. From a security standpoint, keeping the templates under version control isn't entirely safe, if you have anonymous untrusted svn committers. Web commits won't be able to touch them though, so that's ok. --[[Joey]]
