--- a/doc/plugins/nicebundle.mdwn
+++ b/doc/plugins/nicebundle.mdwn
@@ -4,7 +4,7 @@
 This plugin enables a bunch of other plugins -- basically all the ones that
 are not too intrusive, work well with little configuration, and are nice to
 have on any capable wiki. The plugins in this bundle are not enabled by
-default in ikiwiki, so that by default ikiwiki is limited to a few [[core]]
+default in ikiwiki, so that by default ikiwiki is limited to a few [[typo/core]]
 wiki features. If you want a more capable wiki, enable this plugin bundle.
 
 Currently included:
