--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -15,7 +15,7 @@ Released 29 April 2006.
 * Unit test suite (with tests of at least core stuff like
   [[PageSpec]]). _(status: exists, could of course use more tests)_
 * [[Plugins]] _(status: done)_
-* [[Tags]] _(status: fair)_
+* [[Tags]] _(status: good)_
 * Should have fully working [[todo/utf8]] support. _(status: good)_
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other
   scalability issues. _(status: scales to thousands of pages, and approximatly
