web commit by http://joey.kitenet.net/: mail bug fixed, final test

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -11,7 +11,7 @@ Note that for more formal bug reports or todo items, you can also edit the
 
 I just figured I'd edit something on the page with my OpenID, since you've implemented it! --*[Kyle](http://kitenet.net/~kyle/)*=
 
-> Kyle, If you like openid, I can switch your personal wiki over to use your openid --[[Joey]]
+> Kyle, If you like openid, I can switch your personal wiki over to use your openid. --[[Joey]]
 
 ---- 
 
