move examples ref

--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -46,9 +46,15 @@ This tutorial will walk you through setting up a wiki with ikiwiki.
    be able to visit the url and see your wiki.
 
 5. Repeat steps 3 and 4 as desired, editing or adding pages and rebuilding
-   the wiki. You can play around with other ikiwiki parameters such as
-   `--wikiname` and `--rebuild` too. Get comfortable with its command line
-   (see [[usage]]).
+   the wiki. 
+   
+   To quickly get started on a common task like blogging with ikiwiki, you
+   can copy in files from the [[examples]]. The examples are located in
+   `doc/examples/` in the ikiwiki source package.
+
+   You can play around with other ikiwiki parameters such as `--wikiname`
+   and `--rebuild` too. Get comfortable with its command line (see
+   [[usage]]).
 
 6. By now you should be getting tired of typing in all the command line
    options each time you change something in your wiki's setup. Time to
