--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -18,8 +18,7 @@ Thanks! --[[Joey]]
 """]]
 
 * [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
-  the parameters and usage of the ikiwiki program. There are some
-  [[examples]] that you can copy into your wiki to quickly get started.
+  the parameters and usage of the ikiwiki program.
 
 * [[Security]] lists potential security problems. ikiwiki is still being
   developed, and is being written with security as a priority, so don't
