--- a/IkiWiki/Plugin/goodstuff.mdwn
+++ b/IkiWiki/Plugin/goodstuff.mdwn
@@ -1,5 +1,6 @@
 #!/usr/bin/perl
-package IkiWiki::Plugin::nicebundle;
+# Bundle of good stuff.
+package IkiWiki::Plugin::goodstuff;
 
 use warnings;
 use strict;
