--- a/doc/plugins/goodstuff.mdwn
+++ b/doc/plugins/goodstuff.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=nicebundle included=1 author="[[Joey]]"]]
+[[template id=plugin name=goodstuff included=1 author="[[Joey]]"]]
 [[tag type/bundle]]
 
 This plugin enables a bunch of other plugins -- basically all the ones that
