--- a/debian/changelog
+++ b/debian/changelog
@@ -10,10 +10,10 @@ ikiwiki (1.34) UNRELEASED; urgency=low
   * Make the openid plugin support the callbacks from myopenid.com via its
     affiliate program.
   * Add toggle plugin.
-  * Introduce the nicebundle. This is a kind of plugin, that just enables
+  * Introduce the goodstuff bundle. This is a kind of plugin, that just enables
     many other plugins. It's an easy way to boost ikiwiki from its default,
     basic wiki, to a full-featured wiki, without manually picking the right
-    set of plugins. New plugins will be added to the nicebundle from time to
+    set of plugins. New plugins will be added to goodstuff from time to
     time.
   * Change how post signin actions are propigated through the signin process;
     they're now stored in the session.
