--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -10,7 +10,7 @@ Here's another one with *emphasised* text.
 
 do ë characters work? Sure.
 
-moooooooooooooo...
+mooooooooooooooooO...
 
 # Header
 
