--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -18,7 +18,8 @@ Thanks! --[[Joey]]
 """]]
 
 * [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
-  the parameters and usage of the ikiwiki program.
+  the parameters and usage of the ikiwiki program. There are some
+  [[examples]] of things you can do with ikiwiki.
 
 * [[Security]] lists potential security problems. ikiwiki is still being
   developed, and is being written with security as a priority, so don't
