* Add softwaresite example.

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,8 +43,9 @@ ikiwiki (1.34) UNRELEASED; urgency=low
   * Change rcs_commit, it is now passed the name of the user doing the commit
     and their IP address, and needs to construct its own commit message
     containing them, or do something more appropriate for the given RCS.
+  * Add softwaresite example.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 22 Nov 2006 09:08:37 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed, 22 Nov 2006 09:59:12 -0500
 
 ikiwiki (1.33) unstable; urgency=low
 
