--- a/doc/examples.mdwn
+++ b/doc/examples.mdwn
@@ -2,6 +2,8 @@ To make it easier to get started using ikiwiki for some common tasks, this
 page gives some examples of ways to use ikiwiki.
 
 * [[blog]] - a weblog with tags, a tag cloud, archives, and an optional sidebar
+* [[softwaresite]] - a website for some software package, the package
+  can also build static html docs from its wiki
 
 Each example is contained in its own subdirectory; just copy the source
 files into your wiki to start using one of the examples.
