web commit by http://jameswestby.myopenid.com/: Add note of what an OpenID actually looks like.

--- a/doc/openid.mdwn
+++ b/doc/openid.mdwn
@@ -16,6 +16,10 @@ the signin form. (If the field does not appear, OpenID signin is
 disabled.) You do not need to give this wiki a password or go through any
 registration process when using OpenID.
 
+In case you haven't worked it out yet your OpenID is the URL that you are
+given when you sign up (at least for MyOpenID). I at least was expecting
+some sort of number.
+
 ---
 
 It's also possible to make a page in the wiki usable as an OpenID url,
